--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,22 @@ p{
     font-size: .8rem;
     line-height: 1rem;
 }
+
 button{
     font-family: var(--font-family-poppins);
     font-weight: 600;
 }
 
+.btn-main-receta:hover, .btn-main-receta:active{
+    background-color: #f1b07a;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+.enviar:hover, .enviar:active{
+    background-color: #bd8456;
+    cursor: pointer;
+    transition: background-color 1s;
+}
 .enviar{
     background:none;
     border-style: none;
@@ -63,7 +74,7 @@ button{
     display:grid;
     padding: 1rem;
     gap:1rem;
-    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+    grid-template-columns: repeat( auto-fit, minmax(400px, 1fr) );
 }
 .contenedor-main-descripcion{
     display:flex;
@@ -184,6 +195,33 @@ button{
 .facebook, .instagram, .twitter{
     margin-right:1rem;
 }
+@keyframes myAnim {
+	0% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+		transform-origin: center center;
+	}
+
+	10% {
+		animation-timing-function: ease-in;
+		transform: scale(0.91);
+	}
+
+	17% {
+		animation-timing-function: ease-out;
+		transform: scale(0.98);
+	}
+
+	33% {
+		animation-timing-function: ease-in;
+		transform: scale(0.87);
+	}
+
+	45% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
+}
 .facebook{
     color:#f9f9f9;
     background-color: #1877f2;
@@ -204,6 +242,7 @@ button{
 }
 .twitter:hover, .instagram:hover, .facebook:hover, .twitter:active, .instagram:active, .facebook:active{
     background-color:#E29933;
+    animation: myAnim 5s ease 0s 1 normal forwards;
 }
 
 footer{
